--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
       <img src="./eisenhower-matrix.jpg">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="top-section-for-adding-element-to-list">
+    <div class="centered-element">
+      <p id="adding-element">
       <label for="new-task">Add Item</label>
-      <div class="task-row-wrapper">
+      <div class="task-wrapper">
         <input id="new-task"class="task" type="text">
         <button>Add</button>
       </div>
       </p>
       <h3>Todo</h3>
-      <ul id="incomplete-tasks">
+      <ul id="incomplete">
         <li>
           <input type="checkbox">
           <label class="task">Pay Bills</label>
@@ -37,7 +37,7 @@
         </li>
       </ul>
       <h3>Completed</h3>
-      <ul id="completed-tasks">
+      <ul id="completed">
         <li>
           <input type="checkbox" checked>
           <label class="task">See the Doctor</label>
