--- a/index.html
+++ b/index.html
@@ -8,42 +8,42 @@
   </head>
   <body>
     <div class="eisenhower-matrix">
-      <img src="./eisenhower-matrix.jpg">
+      <img class="eisenhower-matrix-img" src="./eisenhower-matrix.jpg">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="centered-element">
       <p id="adding-element">
-      <label for="new-task">Add Item</label>
+      <label for="new-task" class="new-task-label">Add Item</label>
       <div class="task-wrapper">
-        <input id="new-task"class="task" type="text">
-        <button>Add</button>
+        <input id="new-task"class="task task-input" type="text">
+        <button class="btn">Add</button>
       </div>
       </p>
-      <h3>Todo</h3>
-      <ul id="incomplete">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+      <h3 class="title">Todo</h3>
+      <ul id="incomplete" class="task-list">
+        <li class="task-item">
+          <input type="checkbox" class="check-complete">
+          <label class="task task-label">Pay Bills</label>
+          <input type="text" class="task task-input">
+          <button class="edit btn">Edit</button>
+          <button class="delete btn"><img class="remove-img" src="./remove.svg"></button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete"><img src="./remove.svg"></button>
+        <li class="edit-mode task-item">
+          <input type="checkbox" class="check-complete">
+          <label class="task task-label">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task task-input">
+          <button class="edit btn">Save</button>
+          <button class="delete btn"><img class="remove-img" src="./remove.svg"></button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+      <h3 class="title">Completed</h3>
+      <ul id="completed" class="task-list">
+        <li class="task-item">
+          <input type="checkbox" class="check-complete" checked>
+          <label class="task task-label">See the Doctor</label>
+          <input type="text" class="task task-input">
+          <button class="edit btn">Edit</button>
+          <button class="delete btn"><img class="remove-img" src="./remove.svg"></button>
         </li>
       </ul>
     </div>
