fix: change tag for semintic HTML according to rule 1.1 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="eisenhower-matrix">
+    <article class="eisenhower-matrix">
       <img class="eisenhower-matrix-img" src="./eisenhower-matrix.jpg">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="centered-element">
-      <p id="adding-element">
-      <label for="new-task" class="new-task-label">Add Item</label>
-      <div class="task-wrapper">
-        <input id="new-task"class="task task-input" type="text">
-        <button class="btn">Add</button>
+    </article>
+    <section class="centered-element">
+      <div id="adding-element">
+        <label for="new-task" class="new-task-label">Add Item</label>
+        <div class="task-wrapper">
+          <input id="new-task"class="task task-input" type="text">
+          <button class="btn">Add</button>
+        </div>
       </div>
-      </p>
       <h3 class="title">Todo</h3>
       <ul id="incomplete" class="task-list">
         <li class="task-item">
@@ -46,7 +46,7 @@
           <button class="delete btn"><img class="remove-img" src="./remove.svg"></button>
         </li>
       </ul>
-    </div>
+    </section>
     <script src="app.js"></script>
   </body>
 </html>
