--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <article class="eisenhower-matrix">
-      <img class="eisenhower-matrix-img" src="./eisenhower-matrix.jpg">
+      <img class="eisenhower-matrix-img" src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </article>
     <section class="centered-element">
