--- a/index.html
+++ b/index.html
@@ -7,41 +7,41 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <article class="eisenhower-matrix">
-      <img class="eisenhower-matrix-img" src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix">
-      <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <article class="eisenhower__matrix">
+      <img class="eisenhower__matrix_img" src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix">
+      <a class="eisenhower__matrix_more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </article>
     <section class="centered-element">
-      <div id="adding-element">
-        <label for="new-task" class="new-task-label">Add Item</label>
-        <div class="task-wrapper">
-          <input id="new-task"class="task task-input" type="text">
-          <button class="btn">Add</button>
+      <div id="centered-element__adding_element">
+        <label for="new-task" class="centered-element__new-task-label">Add Item</label>
+        <div class="centered-element__task-wrapper">
+          <input id="new-task"class="centered-element__task centered-element__task-input" type="text">
+          <button class="centered-element__btn btn">Add</button>
         </div>
       </div>
-      <h3 class="title">Todo</h3>
-      <ul id="incomplete" class="task-list">
-        <li class="task-item">
-          <input type="checkbox" class="check-complete">
-          <label class="task task-label">Pay Bills</label>
-          <input type="text" class="task task-input">
+      <h3 class="centered-element__title">Todo</h3>
+      <ul id="incomplete" class="centered-element__task-list">
+        <li class="centered-element__task-item">
+          <input type="checkbox" class="centered-element__check-complete">
+          <label class="centered-element__task centered-element__task-label">Pay Bills</label>
+          <input type="text" class="centered-element__task centered-element__task-input">
           <button class="edit btn">Edit</button>
           <button class="delete btn"><img class="remove-img" src="./remove.svg"></button>
         </li>
-        <li class="edit-mode task-item">
-          <input type="checkbox" class="check-complete">
-          <label class="task task-label">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task task-input">
+        <li class="edit-mode centered-element__task-item">
+          <input type="checkbox" class="centered-element__check-complete">
+          <label class="centered-element__task centered-element__task-label">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="centered-element__task centered-element__task-input">
           <button class="edit btn">Save</button>
           <button class="delete btn"><img class="remove-img" src="./remove.svg"></button>
         </li>
       </ul>
-      <h3 class="title">Completed</h3>
-      <ul id="completed" class="task-list">
-        <li class="task-item">
-          <input type="checkbox" class="check-complete" checked>
-          <label class="task task-label">See the Doctor</label>
-          <input type="text" class="task task-input">
+      <h3 class="centered-element__title">Completed</h3>
+      <ul id="completed" class="centered-element__task-list">
+        <li class="centered-element__task-item">
+          <input type="checkbox" class="centered-element__check-complete" checked>
+          <label class="centered-element__task centered-element__task-label">See the Doctor</label>
+          <input type="text" class="centered-element__task centered-element__task-input">
           <button class="edit btn">Edit</button>
           <button class="delete btn"><img class="remove-img" src="./remove.svg"></button>
         </li>
