--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
+  <body class="body">
     <article class="eisenhower__matrix">
       <img class="eisenhower__matrix_img" src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix">
       <a class="eisenhower__matrix_more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
